# tvision

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: smoke_test.py
src/tvision/: actions.py  browser.py  cli.py  client.py  config.py  keymap.py  loop.py  prompts.py  screenshot.py  trace.py
tests/: test_executor_unit.py  test_keymap.py
