[project]
name = "tvision"
version = "0.1.0"
description = "Vision-driven browser agent for Qwen 3.6 at 1280x720"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.50.0",
    "playwright>=1.45.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
tvision = "tvision.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tvision"]
